# nijos

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  TOOLS.md
docs/: review-001.md
src/: main.rs
src/kernel/: vga_buffer.rs
