[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.2"
spin = "0.5"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
